lab9/tests/algo/good/declare_global_array.al
int x[10];

void main(void)
begin

end