lab9/tests/algo/bad/prototype_array_vs_scalar.al
int sum(int x, boolean b[]);

int sum(int s, boolean a) // a is not an array!!!
begin
  
end